# queryme

./: .gitignore  README.md
infra/: Makefile  (+2 more)
services/: README.md  pyproject.toml  run_all_services.py
services/auth_service/: Dockerfile
services/auth_service/app/: Makefile  alembic.ini  entrypoint.sh  main.py  pyproject.toml
services/auth_service/app/alembic/: env.py
services/auth_service/app/alembic/versions/: 0ac6f816994c_add_session_table.py  365298500778_init.py  c31d7fd95eca_create_user_table.py  d5d0f5190e33_add_user_and_session.py
services/auth_service/app/api/: auth_router.py  routes_auth.py
services/auth_service/app/core/: config.py  security.py
services/auth_service/app/crud/: session.py  session_crud.py  user.py  user_crud.py
services/auth_service/app/env/: .env.dev  .env.local
services/auth_service/app/models/: __init__.py  session.py  user.py
services/auth_service/app/schemas/: request.py  user.py
services/auth_service/app/services/: auth_service.py  service.py
services/common/env/: .env.local  .env.prod
services/connection_service/app/: alembic.ini  main.py  pyproject.toml
services/connection_service/app/alembic/versions/: 161c2fbe5211_change_conection_id_to_uuid.py  37926f21a756_add_connection_name.py  58608d98ccec_init.py  69b7870d8ac9_add_is_active.py  a1c3f6d22fa8_set_db_table_nullable.py  bf681552f76c_add_mod_date.py  ff9e578f7c90_set_default_to_date_column.py
services/connection_service/app/api/: connection_router.py
services/connection_service/app/core/: config.py
services/connection_service/app/crud/: connection_crud.py
services/connection_service/app/db/: maria.py
services/connection_service/app/deployment/supervisor/: supervisord.conf
services/connection_service/app/env/: .env.dev  .env.local  .env.prod
services/connection_service/app/models/: __init__.py  connection.py
services/connection_service/app/schemas/: connection.py  request.py
services/connection_service/app/services/: connection_service.py
services/ddl_session_service/app/: Makefile  alembic.ini  main.py  pyproject.toml
services/ddl_session_service/app/alembic/: env.py
services/ddl_session_service/app/api/: ddl_session_router.py
services/ddl_session_service/app/core/: config.py
services/ddl_session_service/app/crud/: ddl_session_crud.py
services/ddl_session_service/app/db/: maria.py
services/ddl_session_service/app/env/: .env.local  .env.prod
services/ddl_session_service/app/models/: __init__.py  ddl_session.py
services/ddl_session_service/app/schemas/: ddl_session.py  request.py
services/ddl_session_service/app/services/: ddl_session_service.py
services/gateway/: README.md
services/gateway/app/: main.py  pyproject.toml
services/gateway/app/api/: ddl_session_router.py  history_router.py  nl2sql_router.py
services/gateway/app/core/: config.py  proxy.py
services/gateway/app/core/middleware/: auth.py
services/gateway/app/env/: .env.dev  .env.local
services/gateway/app/routers/: auth_router.py  connection_router.py
services/history_service/app/: alembic.ini  main.py  pyproject.toml
services/history_service/app/api/: database_query_history_router.py  ddl_query_history_router.py
services/history_service/app/core/: config.py
services/history_service/app/crud/: database_query_history_crud.py  ddl_query_history_crud.py
services/history_service/app/env/: .env.dev  .env.local
services/history_service/app/models/: __init__.py  base_history.py  database_query_history.py  ddl_query_history.py
services/history_service/app/schemas/: __init__.py  common_request.py  common_response.py  database_query_history_request.py  database_query_history_response.py  ddl_query_history_request.py  ddl_query_history_response.py
services/history_service/app/services/: database_query_history_service.py  ddl_query_history_service.py
services/nl2sql_service/app/: main.py  pyproject.toml
services/nl2sql_service/app/api/: nl2sql_router.py
services/nl2sql_service/app/core/: config.py
services/nl2sql_service/app/schemas/: request.py
services/nl2sql_service/app/services/: nl2sql_service.py
services/nl2sql_service/app/utils/: nl2sql_utils.py
services/query_executor_service/app/: pyproject.toml
(+77 files in other folders)
