
[project]
name = "queryme-services"
version = "0.1.0"
description = "QueryMe services workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # 모든 서비스에서 공통으로 사용하는 핵심 패키지
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "gunicorn>=23.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "greenlet>=3.2.3",
    "icecream>=2.1.4",
    "alembic>=1.16.1",
    "asyncmy>=0.2.10",
    "sqlalchemy>=2.0.41",
    "pymysql>=1.1.1",
]

[project.optional-dependencies]
# 인증 관련 의존성 (auth 서비스용)
auth = [
    "bcrypt>=4.3.0",
    "email-validator>=2.2.0",
    "passlib>=1.7.4",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
]

# HTTP 클라이언트 의존성 (gateway, nl2sql 서비스용)
http = [
    "httpx>=0.27.0",
    "aiohttp>=3.12.13",
]

# AI/LLM 관련 의존성 (nl2sql 서비스용)
ai = [
    "google-genai>=1.24.0",
]

# 개발 도구
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

# uv 워크스페이스 설정
[tool.uv.workspace]
members = ["common"]

[tool.black]
line-length = 88  
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88 
