[project]
name = "auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "===3.12.5"
dependencies = [
    "alembic>=1.16.1",
    "asyncmy>=0.2.10",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.12",
    "greenlet>=3.2.3",
    "gunicorn>=23.0.0",
    "icecream>=2.1.4",
    "passlib>=1.7.4",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
