[project]
name = "nl2sql-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "===3.12.5"
dependencies = [
    "aiohttp>=3.12.13",
    "fastapi>=0.115.14",
    "google-genai>=1.24.0",
    "icecream>=2.1.5",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
    "sqlalchemy>=2.0.0",
    "asyncmy>=0.2.9",
    "greenlet>=3.2.3",
]
